# ORC

./: .bumpversion.cfg  .coveragerc  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pypirc_example  AGENTS.md  AI_CODE_SUMMARY_DESIGN.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_SCHEMA_FOR_CODE_NAVIGATION.md  DEAD_CODE_ANALYSIS.md  DELETION_RECOMMENDATIONS.md  IMPLEMENTATION_ROADMAP.md  INSTALLATION_TEST_REPORT.md  LICENSE  MANIFEST.in  Makefile  ORC.md  ORC_ANALYSIS_REPORT.md  ORC_FIXES_APPLIED.md  ORC_STATUS_AND_ROADMAP.md  ORC_TEST_SUMMARY.md  PACKAGE_READY.md  PARSERS_COMPLETE.md  PARSER_DEMO.md  Procfile  QWEN.md  README.md  RELEASE.md  SECURITY.md  STUB_COMMANDS_DESIGN.md  WARP.md  WORKING_COMMANDS.md  nixpacks.toml  pyproject.toml  railway.json  (+8 more)
.github/: FUNDING.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  MODE_SYSTEM.md  NEW_AI_TOOLS.md  ORC_CLI_QUICK_START.md  ORC_VERDICT_SYSTEM.md  (+13 more)
orc/: .env.example  AI_BEHAVIOR.md  CLI.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_v1.md  __init__.py  ai_client.py  ai_guidelines.py  ai_summarizer.py  ai_tools.py  architecture.md  banner.py  cli.py  cli_auth.py  cli_loop.py  cli_main.py  cli_style.py  code_formatter.py  config.py  custom_provider.py  dead_code_display.py  debug_test.py  dependency_display.py  dividers.py  issue_display.py  mode_manager.py  performance_display.py  progress_bar.py  pyproject.toml  query_handler.py  recommendations_display.py  requirements-prod.txt  requirements.txt  response_formatter.py  run_orc.py  session_manager.py  setup.py  (+8 more)
orc/agent/: impact_analyzer.py  query_engine.py  recommender.py
orc/ai/: __init__.py  ai_backend.py  ai_client.py  ai_summarizer.py  ai_tools.py
orc/analysis/: __init__.py  analyzer.py  code_smells.py  complexity.py  complexity_analyzer.py  dead_code.py  dead_code_analyzer.py  dependencies.py  dependency_analyzer.py  dependency_graph.py  dependency_resolver.py  duplicate_finder.py  metrics.py  optimizer.py  orc_analysis_original.py  patterns.py  security.py
orc/api/: __init__.py  server.py
orc/api/endpoints/: analysis.py  context.py  optimization.py  query.py
orc/cli/: __init__.py  banner.py  cli_loop.py  cli_main.py  cli_style.py  commands.py  onboarding.py  orc_cli_original.py  progress.py  ui_components.py  visualizer.py
orc/config/: __init__.py  patterns.yaml  production.py  settings.py
orc/context/: __init__.py  builder.py  embeddings.py  llm_client.py  query_parser.py  relevance_ranker.py
orc/core/: __init__.py  analyzer.py  cache.py  cache_manager.py  compressor.py  config.py  dependency_resolver.py  graph_builder.py  index_service.py  indexer.py  parallel_indexer.py  scorer.py  toc_generator.py
orc/docs/: INSTALLATION.md  ORC_VISION.md  QUICK_START.md  api_reference.md  context_efficiency_analysis.md  database_optimizations.md  getting_started.md  optimization_rules.md  orc_v1_documentation.md
orc/docs/development/: AGENTS.md  ENHANCED_PARSER_DESIGN.md  MERGE_ANALYSIS_REPORT.md  MERGE_COMPLETE_REPORT.md  MERGE_PLAN_FINAL.md  ORC System Build Guide for Claude Opus.md  ORC_REBUILD_CHECKLIST.md  ORC_TESTING_PLAN.md  PARSER_DATABASE_GAP_ANALYSIS.md  PHASE_6_7_COMPLETE.md  PREMIUM_CLI_REDESIGN_PLAN.md
orc/docs/development/architecture/: ARCHITECTURE_CONNECTION_MAP.md  HONEST_ASSESSMENT_DATABASE_NAVIGATION.md
orc/docs/development/testing/: BUG_REPORT_TEST_RESULTS.md  ORC_FEATURE_VERIFICATION.md  ORC_SYSTEM_ISSUES_VERIFIED.md  TESTING_SESSION_SUMMARY.md
orc/docs/tutorials/: first_analysis.md  performance.md
orc/integrations/: __init__.py  ci_cd.py  git.py
orc/optimization/: __init__.py  algorithm_detector.py  code_generator.py  suggester.py
orc/optimization/rules/: javascript_rules.py  python_rules.py  react_rules.py
orc/orc/: __init__.py  run_orc.py
orc/orc_package/: __init__.py
orc/orc_package/agent/: impact_analyzer.py  query_engine.py  recommender.py
orc/orc_package/analysis/: dead_code.py  dependencies.py  metrics.py  patterns.py
orc/orc_package/cli/: __init__.py  commands.py  visualizer.py
orc/orc_package/config/: patterns.yaml
orc/parsers/: __init__.py  all_parsers.py  base_parser.py  django_parser.py  fastapi_parser.py  html_css_parser.py  javascript_parser.py  json_parser.py  less_parser.py  markdown_parser.py  orc_parsers_original.py  python_parser.py  react_parser.py  sass_parser.py  scss_parser.py  tailwind_parser.py  typescript_parser.py  yaml_parser.py
orc/scripts/: __init__.py  benchmark.py  deploy.py  migrate.py  sample_data.py
orc/session/: __init__.py  session_manager.py  token_tracker.py
orc/storage/: __init__.py  cache.py  graph_db.py  vector_store.py
orc/storage/migrations/: v1_initial.sql
orc/tests/: conftest.py  test_ai_integration.py  test_analyzer.py  test_api.py  test_cache.py  test_cli.py  test_complexity_optimizer.py  test_compression.py  test_config.py  test_graph.py  test_index_service.py  test_indexer.py  test_integration.py  test_onboarding.py  test_orc_basic.py  test_parallel_indexer.py  test_parsers.py  test_performance.py  test_simple.py
orc/tests/fixtures/sample_codebase/: hello.py
orc/tools/: __init__.py  codebase_mapper.py
orc/utils/: file_modifier.py  module_filter.py
orc/web/: app.py  app_new.py  app_prod.py  auth.py  dashboard.py  database.py  forms.py  models.py  models_tokens.py
orc/web/instance/: orc_web.db
orc/web/static/css/: api_config.css  auth.css  chat.css  docs.css  modal.css  sidebar.css
orc/web/templates/: 404.html  api_docs.html  base.html  complexity.html  dashboard.html  error.html  graph.html  recommendations.html
orc/web/templates/analysis/: results.html  run.html
orc/web/templates/auth/: signup.html
orc/web/templates/chat/: index.html
orc/web/templates/components/: sidebar.html
orc/web/templates/docs/: api.html  cli.html  getting_started.html  index.html  tutorial_ai_chat.html  tutorials.html
orc/web/templates/projects/: detail.html  new.html
orc/web/templates/settings/: account.html  api_config.html
orc/web/templates/stats/: project_detail.html
(+98 files in other folders)
