
[tool.poetry]
name = "orc"
version = "1.0.0-beta"
description = "ORC - Optimization & Refactoring Catalyst - AI-Powered Codebase Intelligence"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
rich = "^10.0.0"
networkx = "^2.6.0"
pyyaml = ">=5.4.0"
flask = "^2.0.0"
dataclasses-json = "^0.5"
groq = "^0.5.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.24.0"
anthropic = {version = "^0.5.0", optional = true}
google-generativeai = {version = "^0.3.0", optional = true}

[tool.poetry.scripts]
orc = "run_orc:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"